--- a/src/app.html
+++ b/src/app.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<link rel="stylesheet" href="../src/app.css" />
+		<link rel="icon" href="%sveltekit.assets%/images/favicon.png" />
+		<link rel="stylesheet" href="%sveltekit.assets%/app.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
